# fws-bench

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.claude/rules/: trello-board.md
.github/workflows/: ci.yml
docs/: PHILOSOPHY.md
examples/: noise_probe.py  phase10_g_h_linear_and_init_remap.py  phase10_polar_projection.py  phase11b_supervised_distillation.py  phase12_bandwidth_ablation.py  phase2_real_siren.py  phase3_trajectory.py  phase4_teacher_student.py  phase5_hyperparam_sweep.py  phase6_confirm_winning.py  phase8_cifar_fiducial.py  phase8_mnist_smoke.py  phase9_recursive_siren.py  smoke_integration.py
examples/_common/: README.md  __init__.py  arms.py  data.py  diagnostics.py  mainnet.py  reporting.py  training.py
src/fws_bench/: __init__.py  multiarm.py  stages.py
tests/: test_multiarm.py  test_paired_train.py  test_smoke.py  test_stages.py
